--- a/compose.yml
+++ b/compose.yml
@@ -1,41 +1,41 @@
 services:
-  backend-app1:
-    container_name: backend-app1
-    environment:
-      - PORT=8081
-    build:
-      context: ../backend/
-      dockerfile: ../backend/Dockerfile
-    networks:
-      audit-network:
-        ipv4_address: 192.168.1.2
+  # backend-app1:
+  #   container_name: backend-app1
+  #   environment:
+  #     - PORT=8081
+  #   build:
+  #     context: ./
+  #     dockerfile: ./backend/Dockerfile
+  #   networks:
+  #     audit-network:
+  #       ipv4_address: 192.168.1.2
 
   frontend-app:
     container_name: frontend-app
     environment:
       - PORT=80
     build:
-      context: ../frontend/
-      dockerfile: ../frontend/Dockerfile
+      context: ./
+      dockerfile: ./frontend/Dockerfile
     ports:
       - "80:80"
     networks:
       audit-network:
         ipv4_address: 192.168.1.4
       
-  reverse-proxy-backend:
-    container_name: reverse-proxy-backend
-    environment:
-      - REVERSE_PROXY_PORT=8082
-      - TZ=Asia/Bangkok
-    build: "./nginx"
-    ports:
-      - "8082:70"
-    networks:
-      audit-network:
-        ipv4_address: 192.168.1.5
-    depends_on:
-      - "backend-app1"
+  # reverse-proxy-backend:
+  #   container_name: reverse-proxy-backend
+  #   environment:
+  #     - REVERSE_PROXY_PORT=8082
+  #     - TZ=Asia/Bangkok
+  #   build: "./nginx"
+  #   ports:
+  #     - "8082:70"
+  #   networks:
+  #     audit-network:
+  #       ipv4_address: 192.168.1.5
+  #   depends_on:
+  #     - "backend-app1"
 
 networks:
   audit-network:
