--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,4 +1,3 @@
 FROM nginx:1.28.0-alpine
-ARG ReverseProxyPort
-EXPOSE ${ReverseProxyPort}
+EXPOSE 8082
 COPY nginx.conf /etc/nginx/conf.d/default.conf
