--- a/central/compose.yml
+++ b/central/compose.yml
@@ -4,8 +4,8 @@ services:
   #   environment:
   #     - PORT=8081
   #   build:
-  #     context: ./
-  #     dockerfile: ./backend/Dockerfile
+  #     context: ../backend
+  #     dockerfile: Dockerfile
   #   networks:
   #     audit-network:
   #       ipv4_address: 192.168.1.2
@@ -15,8 +15,8 @@ services:
     environment:
       - PORT=80
     build:
-      context: ../frontend/
-      dockerfile: ../frontend/Dockerfile
+      context: ../frontend
+      dockerfile: Dockerfile
     ports:
       - "80:80"
     networks:
