--- a/central/nginx/nginx.conf
+++ b/central/nginx/nginx.conf
@@ -1,5 +1,5 @@
 upstream backend {
-    server backend-app1:8081;
+    server backend-app:8081;
 }
 log_format ultra escape=json '{ "time_local": "$time_local", "remote_addr": "$remote_addr", "request": "$request", "status": $status, "body_bytes_sent": $body_bytes_sent, "http_referer": $http_referer, "http_user_agent": $http_user_agent, "gzip_ratio": $gzip_ratio, "request_time": $request_time, "upstream_response_time": $upstream_response_time, "pipe": $pipe, "request_length": $request_length }';
 server {
