--- a/central/compose.yml
+++ b/central/compose.yml
@@ -5,7 +5,7 @@ services:
       context: ../backend
       dockerfile: Dockerfile
     networks:
-      audit-network:
+      wongnok-network:
         ipv4_address: 192.168.1.2
 
   frontend-app:
@@ -16,7 +16,7 @@ services:
     ports:
       - "80:80"
     networks:
-      audit-network:
+      wongnok-network:
         ipv4_address: 192.168.1.4
 
   reverse-proxy-backend:
@@ -28,7 +28,7 @@ services:
     ports:
       - "8082:70"
     networks:
-      audit-network:
+      wongnok-network:
         ipv4_address: 192.168.1.5
     depends_on:
       - "backend-app"
@@ -44,7 +44,7 @@ services:
     volumes:
       - ../database:/post-init-scripts
     networks:
-      audit-network:
+      wongnok-network:
         ipv4_address: 192.168.1.6
   sql-init:
     image: mcr.microsoft.com/mssql-tools
@@ -60,10 +60,10 @@ services:
         echo 'Post-start script execution failed.'
       "
     networks:
-      audit-network:
+      wongnok-network:
         ipv4_address: 192.168.1.7
 networks:
-  audit-network:
+  wongnok-network:
     driver: bridge
     ipam:
       config:
