--- a/central/compose.yml
+++ b/central/compose.yml
@@ -4,6 +4,8 @@ services:
     build:
       context: ../backend
       dockerfile: Dockerfile
+    depends_on:
+       - "sql-init"
     networks:
       wongnok-network:
         ipv4_address: 192.168.1.2
@@ -17,7 +19,7 @@ services:
       - "80:80"
     networks:
       wongnok-network:
-        ipv4_address: 192.168.1.4
+        ipv4_address: 192.168.1.3
 
   reverse-proxy-backend:
     container_name: reverse-proxy-backend
@@ -29,13 +31,13 @@ services:
       - "8082:70"
     networks:
       wongnok-network:
-        ipv4_address: 192.168.1.5
+        ipv4_address: 192.168.1.4
     depends_on:
       - "backend-app"
 
-  sqlserver:
+  mssql-server:
     image: mcr.microsoft.com/mssql/server
-    container_name: sqlserver
+    container_name: mssql-server
     environment:
       MSSQL_SA_PASSWORD: "yourStrong(!)Password"
       ACCEPT_EULA: "Y"
@@ -45,23 +47,24 @@ services:
       - ../database:/post-init-scripts
     networks:
       wongnok-network:
-        ipv4_address: 192.168.1.6
+        ipv4_address: 192.168.1.5
   sql-init:
     image: mcr.microsoft.com/mssql-tools
+    container_name: sql-init
     depends_on:
-      - "sqlserver"
+      - "mssql-server"
     volumes:
       - ../database:/post-init-scripts
     command: >
       sh -c "
         echo 'Waiting for SQL Server to be fully ready...' &&
-        /opt/mssql-tools/bin/sqlcmd -S sqlserver -U SA -P 'yourStrong(!)Password' -d master -i /post-init-scripts/initialize.sql &&
+        /opt/mssql-tools/bin/sqlcmd -S mssql-server -U SA -P 'yourStrong(!)Password' -d master -i /post-init-scripts/initialize.sql &&
         echo 'Post-start script executed successfully.' ||
         echo 'Post-start script execution failed.'
       "
     networks:
       wongnok-network:
-        ipv4_address: 192.168.1.7
+        ipv4_address: 192.168.1.6
 networks:
   wongnok-network:
     driver: bridge
